Tests/a1/reject/09.ul
int main (x-3) {
	print return x;
}